ux: improve tooltip recognition

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -163,6 +163,27 @@
   <Style Selector="ToolTip">
     <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
     <Setter Property="Background" Value="{DynamicResource Brush.Popup}"/>
+    <Setter Property="VerticalOffset" Value="-8"/>
+    <Setter Property="Template">
+      <ControlTemplate>
+        <Grid Effect="drop-shadow(0 0 8 #80000000)">
+          <Border Margin="8"
+                  Padding="8,6"
+                  CornerRadius="4"
+                  Background="{DynamicResource Brush.Popup}"
+                  BorderThickness="0"
+                  MaxWidth="{TemplateBinding MaxWidth}"
+                  MinHeight="{TemplateBinding MinHeight}"
+                  HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
+            <ContentPresenter Name="PART_ContentPresenter"
+                              MaxWidth="{TemplateBinding MaxWidth}"
+                              Content="{TemplateBinding Content}"
+                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                              TextBlock.TextWrapping="Wrap"/>
+          </Border>
+        </Grid>
+      </ControlTemplate>
+    </Setter>
   </Style>
 
   <Style Selector="FlyoutPresenter">
