--- a/src/Views/RepositoryToolbar.axaml
+++ b/src/Views/RepositoryToolbar.axaml
@@ -10,28 +10,19 @@
   <Grid ColumnDefinitions="*,Auto,*">
       <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="4,0,0,0">
         <Button Classes="icon_button" Width="32" Command="{Binding OpenInFileManager}" ToolTip.Tip="{DynamicResource Text.Repository.Explore}">
-          <Path Width="15" Height="15" Data="{StaticResource Icons.Explore}" Margin="0,2,0,0"/>
-        </Button>
-        
-        <Button Classes="icon_button" Width="32" Command="{Binding OpenInTerminal}" ToolTip.Tip="{DynamicResource Text.Repository.Terminal}">
-          <Path Width="12" Height="12" Data="{StaticResource Icons.Terminal}"/>
+          <Path Width="14" Height="14" Data="{StaticResource Icons.Explore}" Margin="0,2,0,0"/>
         </Button>
 
         <Button Classes="icon_button" Width="32" Click="OpenWithExternalTools" ToolTip.Tip="{DynamicResource Text.Repository.OpenWithExternalTools}">
           <Path Width="13" Height="13" Data="{StaticResource Icons.OpenWith}"/>
         </Button>
-
-        <Rectangle Width="1" Height="16"
-                   Margin="8,0"
-                   VerticalAlignment="Center"
-                   Fill="{DynamicResource Brush.Border2}"/>
-
-        <Button Classes="icon_button" Width="32" Click="OpenStatistics" ToolTip.Tip="{DynamicResource Text.Repository.Statistics}">
-          <Path Width="12" Height="12" Data="{StaticResource Icons.Statistics}"/>
+        
+        <Button Classes="icon_button" Width="32" Command="{Binding OpenInTerminal}" ToolTip.Tip="{DynamicResource Text.Repository.Terminal}">
+          <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
         </Button>
 
-        <Button Classes="icon_button" Width="32" Command="{Binding OpenConfigure}" ToolTip.Tip="{DynamicResource Text.Repository.Configure}">
-          <Path Width="14" Height="14" Data="{StaticResource Icons.Settings}"/>
+        <Button Classes="icon_button" Width="32" Click="OpenStatistics" ToolTip.Tip="{DynamicResource Text.Repository.Statistics}">
+          <Path Width="13" Height="13" Data="{StaticResource Icons.Statistics}"/>
         </Button>
       </StackPanel>
 
@@ -81,10 +72,14 @@
         <Button Classes="icon_button" Width="32" Margin="16,0,0,0" Command="{Binding Cleanup}" ToolTip.Tip="{DynamicResource Text.Repository.Clean}">
           <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icons.Clean}"/>
         </Button>
+
+        <Button Classes="icon_button" Width="32" Margin="8,0,0,0" Command="{Binding OpenConfigure}" ToolTip.Tip="{DynamicResource Text.Repository.Configure}">
+          <Path Width="14" Height="14" Data="{StaticResource Icons.Settings}"/>
+        </Button>
       </StackPanel>
 
       <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,4,0">
-        <Path Width="12" Height="12" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Branch}"/>
+        <Path Width="13" Height="13" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Branch}"/>
 
         <ContentControl Margin="6,0,0,0">
           <ContentControl.Content>
