refactor: repository configure
* move button to the left
* change view type from Popup to ChromelessWindow

--- a/src/Views/RepositoryToolbar.axaml
+++ b/src/Views/RepositoryToolbar.axaml
@@ -24,6 +24,10 @@
         <Button Classes="icon_button" Width="32" Click="OpenStatistics" ToolTip.Tip="{DynamicResource Text.Repository.Statistics}">
           <Path Width="13" Height="13" Data="{StaticResource Icons.Statistics}"/>
         </Button>
+
+        <Button Classes="icon_button" Width="32" Click="OpenConfigure" ToolTip.Tip="{DynamicResource Text.Repository.Configure}">
+          <Path Width="14" Height="14" Data="{StaticResource Icons.Settings}"/>
+        </Button>
       </StackPanel>
 
       <StackPanel Grid.Column="1" Orientation="Horizontal">
@@ -71,10 +75,6 @@
 
         <Button Classes="icon_button" Width="32" Margin="16,0,0,0" Command="{Binding Cleanup}" ToolTip.Tip="{DynamicResource Text.Repository.Clean}">
           <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icons.Clean}"/>
-        </Button>
-
-        <Button Classes="icon_button" Width="32" Margin="8,0,0,0" Command="{Binding OpenConfigure}" ToolTip.Tip="{DynamicResource Text.Repository.Configure}">
-          <Path Width="14" Height="14" Data="{StaticResource Icons.Settings}"/>
         </Button>
       </StackPanel>
 
