--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -29,7 +29,7 @@
                 Padding="0"
                 Command="{Binding Clear}"
                 IsEnabled="{Binding Stashes.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}">
-          <Path Width="14" Height="14" Data="{StaticResource Icons.Clean}"/>
+          <Path Width="14" Height="14" Data="{StaticResource Icons.RemoveAll}"/>
         </Button>
       </Grid>
 
