--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -69,38 +69,16 @@
                              Margin="0,0,4,0"
                              Fill="{DynamicResource Brush.FG1}"
                              IsVisible="{Binding CanPullFromUpstream}"/>
-                    
-                    <ItemsControl ItemsSource="{Binding Decorators}" IsVisible="{Binding HasDecorators}">
-                      <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                          <WrapPanel Orientation="Horizontal" VerticalAlignment="Center"/>
-                        </ItemsPanelTemplate>
-                      </ItemsControl.ItemsPanel>
 
-                      <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="{x:Type m:Decorator}">
-                          <Border Height="16" Margin="0,0,4,0" CornerRadius="2" ClipToBounds="True">
-                            <StackPanel Orientation="Horizontal">
-                              <Border Background="{DynamicResource Brush.DecoratorIconBG}" Width="16">
-                                <Path Width="8" Height="8" 
-                                      Stretch="Uniform" 
-                                      Data="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToIcon}}" 
-                                      Fill="{DynamicResource Brush.DecoratorIcon}"
-                                      VerticalAlignment="Center"/>
-                              </Border>
-                              <Border Background="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToBackground}}">
-                                <TextBlock Classes="monospace" 
-                                           Text="{Binding Name}" 
-                                           FontSize="10" 
-                                           Margin="4,0" 
-                                           Foreground="{DynamicResource Brush.DecoratorFG}"
-                                           FontWeight="{Binding Type, Converter={x:Static c:DecoratorTypeConverters.ToFontWeight}}"/>
-                              </Border>
-                            </StackPanel>
-                          </Border>
-                        </DataTemplate>
-                      </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                    <v:CommitRefsPresenter IsVisible="{Binding HasDecorators}"
+                                           IconBackground="{DynamicResource Brush.DecoratorIconBG}"
+                                           IconForeground="{DynamicResource Brush.DecoratorIcon}"
+                                           BranchNameBackground="{DynamicResource Brush.DecoratorBranch}"
+                                           TagNameBackground="{DynamicResource Brush.DecoratorTag}"
+                                           LabelForeground="{DynamicResource Brush.DecoratorFG}"
+                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                           FontSize="10"
+                                           VerticalAlignment="Center"/>
 
                     <TextBlock Classes="monospace" 
                                Text="{Binding Subject}"
