--- a/src/Views/Pull.axaml
+++ b/src/Views/Pull.axaml
@@ -12,7 +12,7 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Pull.Title}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="140,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32,32,32,32" ColumnDefinitions="140,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -91,6 +91,10 @@
       <CheckBox Grid.Row="5" Grid.Column="1"
                 Content="{DynamicResource Text.Pull.NoTags}"
                 IsChecked="{Binding NoTags, Mode=TwoWay}"/>
+      
+      <CheckBox Grid.Row="6" Grid.Column="1"
+                Content="{DynamicResource Text.Pull.FetchAllBranchesOnPull}"
+                IsChecked="{Binding FetchAllBranchesOnPull, Mode=TwoWay}"/>
     </Grid>
   </StackPanel>
 </UserControl>
