--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -77,7 +77,13 @@
                Height="28"
                CornerRadius="3"
                Watermark="{DynamicResource Text.Configure.Proxy.Placeholder}"
-               Text="{Binding HttpProxy, Mode=TwoWay}"/>
+               Text="{Binding HttpProxy, Mode=TwoWay}">
+        <TextBox.InnerRightContent>
+          <Button Classes="icon_button" IsVisible="{Binding HttpProxy, Converter={x:Static StringConverters.IsNotNullOrEmpty}}" Command="{Binding ClearHttpProxy}">
+            <Path Width="16" Height="16" Margin="0,0,0,0" Data="{StaticResource Icons.Clear}" Fill="{DynamicResource Brush.FG1}"/>
+          </Button>
+        </TextBox.InnerRightContent>
+      </TextBox>
 
       <TextBlock Grid.Row="3" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
