--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -33,17 +33,16 @@
         <DataGrid.Styles>
           <Style Selector="DataGridColumnHeader">
             <Setter Property="MinHeight" Value="24"/>
+            <Setter Property="Margin" Value="0"/>
+            <Setter Property="Padding" Value="0"/>
             <Setter Property="Template">
               <ControlTemplate>
                 <Border Background="{DynamicResource Brush.Window}"
                         BorderBrush="{DynamicResource Brush.Border0}"
                         BorderThickness="0,0,1,1">
                   <ContentPresenter x:Name="PART_ContentPresenter"
-                                      Grid.Column="0"
-                                      Margin="4,0"
-                                      Content="{TemplateBinding Content}"
-                                      ContentTemplate="{TemplateBinding ContentTemplate}"
-                                      HorizontalContentAlignment="Center"/>
+                                    Content="{TemplateBinding Content}"
+                                    HorizontalAlignment="Center"/>
                 </Border>        
               </ControlTemplate>
             </Setter>
@@ -138,7 +137,7 @@
                 <ToggleButton Classes="time_display_mode" 
                               Width="10" Height="10"
                               IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=DisplayTimeAsPeriodInHistories, Mode=TwoWay}"/>
-                <TextBlock Classes="table_header" Margin="4,0,0,0" Text="{DynamicResource Text.Histories.Header.Time}"/>
+                <TextBlock Classes="table_header" Margin="6,0,0,0" Text="{DynamicResource Text.Histories.Header.Time}"/>
               </StackPanel>
 
             </DataGridTemplateColumn.Header>
