--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -120,22 +120,26 @@
                       HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                       Background="Transparent"/>
 
-        <Grid Grid.Row="2" Margin="0,0,4,4">
-          <Border Background="{DynamicResource Brush.Window}">
-            <Path Width="128" Height="128"
-                  Data="{StaticResource Icons.Detail}"
-                  HorizontalAlignment="Center"
-                  Fill="{DynamicResource Brush.FG2}"/>
-          </Border>
-
-          <ContentControl Content="{Binding DetailContext}">
+        <Border Grid.Row="2" Margin="0,0,4,4">
+          <ContentControl>
+            <ContentControl.Content>
+              <Binding Path="DetailContext">
+                <Binding.TargetNullValue>
+                  <Path Width="128" Height="128"
+                        Data="{StaticResource Icons.Detail}"
+                        HorizontalAlignment="Center"
+                        Fill="{DynamicResource Brush.FG2}"/>
+                </Binding.TargetNullValue>
+              </Binding>
+            </ContentControl.Content>
+            
             <ContentControl.DataTemplates>
               <DataTemplate DataType="vm:CommitDetail">
                 <v:CommitDetail/>
               </DataTemplate>
             </ContentControl.DataTemplates>
           </ContentControl>
-        </Grid>
+        </Border>
       </Grid>
     </Grid>
   </Grid>
