--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -174,15 +174,19 @@
                   Background="{DynamicResource Brush.Window}"
                   BorderBrush="{DynamicResource Brush.Border0}"/>
 
-    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
-      <Border Background="{DynamicResource Brush.Window}">
-        <Path Width="128" Height="128"
-              Data="{StaticResource Icons.Detail}"
-              HorizontalAlignment="Center"
-              Fill="{DynamicResource Brush.FG2}"/>
-      </Border>
-
-      <ContentControl Content="{Binding DetailContext}">
+    <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+      <ContentControl>
+        <ContentControl.Content>
+          <Binding Path="DetailContext">
+            <Binding.TargetNullValue>
+              <Path Width="128" Height="128"
+                    Data="{StaticResource Icons.Detail}"
+                    HorizontalAlignment="Center"
+                    Fill="{DynamicResource Brush.FG2}"/>
+            </Binding.TargetNullValue>
+          </Binding>
+        </ContentControl.Content>
+        
         <ContentControl.DataTemplates>
           <DataTemplate DataType="vm:CommitDetail">
             <v:CommitDetail/>
@@ -193,23 +197,21 @@
           </DataTemplate>
 
           <DataTemplate DataType="x:Int32">
-            <Grid Background="{DynamicResource Brush.Window}">
-              <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Path Width="128" Height="128"
-                      Data="{StaticResource Icons.Detail}"
-                      HorizontalAlignment="Center"
-                      Fill="{DynamicResource Brush.FG2}"/>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+              <Path Width="128" Height="128"
+                    Data="{StaticResource Icons.Detail}"
+                    HorizontalAlignment="Center"
+                    Fill="{DynamicResource Brush.FG2}"/>
 
-                <TextBlock HorizontalAlignment="Center"
-                           Margin="0,16"
-                           FontSize="24" FontWeight="Bold"
-                           Foreground="{DynamicResource Brush.FG2}"
-                           Text="{Binding Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Histories.Selected'}"/>
-              </StackPanel>
-            </Grid>
+              <TextBlock HorizontalAlignment="Center"
+                         Margin="0,16"
+                         FontSize="24" FontWeight="Bold"
+                         Foreground="{DynamicResource Brush.FG2}"
+                         Text="{Binding Converter={x:Static c:StringConverters.FormatByResourceKey}, ConverterParameter='Histories.Selected'}"/>
+            </StackPanel>
           </DataTemplate>
         </ContentControl.DataTemplates>
       </ContentControl>
-    </Grid>
+    </Border>
   </v:LayoutableGrid>
 </UserControl>
